# Chroma-Engine

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: fs.shader  phong_fragment.shader  phong_vertex.shader  vs.shader
assets/shaders/phong/: phong.frag  phong.vert  phong_frag.shader  phong_vert.shader
sandbox/src/: Sandbox.cpp
src/: Chroma.h
src/chroma/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/chroma/geometry/: Mesh.cpp  Mesh.h
src/chroma/main/: Application.cpp  Application.h  AssetImporter.cpp  AssetImporter.h  Input.h  KeyCodes.h  Log.cpp  Log.h  TimeStep.h  entry.cpp  main.cpp  main.h
src/chroma/openGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLVertexArrayObject.cpp  OpenGLVertexArrayObject.h
src/chroma/renderer/: Buffer.h  Camera.cpp  Camera.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Light.h  RenderContext.h  Renderer.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/chroma/window/: Window.cpp  Window.h  WindowsInput.cpp  WindowsInput.h
